--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "homepage": "https://github.com/web3-master/zksnark-sudoku#readme",
   "workspaces": [
     "./packages/*"
-  ]
+  ],
+  "dependencies": {
+    "zkverifyjs": "file:packages/zkverifyjs/zkverifyjs-1.0.0.tgz"
+  }
 }
