--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -7,7 +7,9 @@
     "build": "next build && next export",
     "start": "next start",
     "lint": "eslint .",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && wrangler pages dev"
   },
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
@@ -29,6 +31,7 @@
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.8.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@cloudflare/next-on-pages": "^1.13.2"
   }
 }
