--- a/packages/circuit/package.json
+++ b/packages/circuit/package.json
@@ -28,5 +28,8 @@
     "circom_tester": "0.0.20",
     "mocha": "^9.1.3",
     "sudoku": "0.0.3"
+  },
+  "dependencies": {
+    "sindri": "^0.0.1-alpha.57"
   }
 }
