--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,14 +18,14 @@
     "@talisman-connect/wallets": "^1.1.3",
     "@talismn/connect-components": "^1.1.8",
     "@types/node": "18.11.15",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
+    "@types/react": "18.3.5",
+    "@types/react-dom": "18.3.0",
     "antd": "^5.0.7",
     "client-only": "^0.0.1",
     "eslint-config-next": "13.0.6",
     "next": "13.0.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-modal": "^3.16.1",
     "snarkjs": "^0.7.4",
     "sudoku": "^0.0.3",
@@ -36,6 +36,7 @@
     "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
+    "@types/snarkjs": "^0.7.8",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.14",
