--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -31,7 +31,8 @@
     "react-modal": "^3.16.1",
     "snarkjs": "^0.7.4",
     "sudoku": "^0.0.3",
-    "zkverifyjs": "file:../zkverifyjs/zkverifyjs-1.0.0.tgz"
+    "zkverifyjs": "file:../zkverifyjs/zkverifyjs-1.0.0.tgz",
+    "wrangler": "3.74.0"
   },
   "devDependencies": {
     "@swc/helpers": "^0.5.12",
