Web3 1034 zkverify integration (#2)
* Working integration but using a seed phrase to connect. Save progress, wallet button and zkverify assets added.

* Wallet Connect functionality - progress.  Added new entrypoint, ensured package works with the browser.  Next step transaction handling...

* Full working integration with zkverifyjs and proof verification with zkverify

* Full sindri integration for proof generation, and env flags to change back to snarkjs.

* Remove next export, add image optimize to config, fix build errors.

* fix ts and build errors

* chore: move AccountContext folder

* solve merge conflicts

* persist deploy config

* update wrangler

* update wrangler

* update

* update wrangler file location

* remove wrangler

* update wrangler

* update wrangler file location

* fix weird issue

* fix weird issue

* update readme

* add env file template

* update

* udpate

* add more details on fail

* test

* test

* use sindri API to generate proof

* update

* use native response

* update

* test

* test

* update

* update

* update readme with circuit creations steps

* update

* update

* poll final result

---------

Co-authored-by: Santi <santi.gamo@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ build
 
 # misc
 .DS_Store
-.env*
+.env
 
 # debug
 npm-debug.log*
@@ -32,6 +32,7 @@ yarn-error.log*
 .idea
 
 # wrangler
+.wrangler
 packages/app/.wrangler
 
 # vscode
