--- a/packages/circuit/package.json
+++ b/packages/circuit/package.json
@@ -25,9 +25,11 @@
   "devDependencies": {
     "blake-hash": "^2.0.0",
     "chai": "^4.3.4",
-    "circom_tester": "0.0.13",
-    "circomlibjs": "^0.1.4",
+    "circom_tester": "0.0.20",
     "mocha": "^9.1.3",
     "sudoku": "0.0.3"
+  },
+  "dependencies": {
+    "sindri": "^0.0.1-alpha.57"
   }
 }
