--- a/packages/app/.eslintrc.json
+++ b/packages/app/.eslintrc.json
@@ -8,7 +8,7 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": true
   },
   "root": true
 }
