[WEB3-1090] Use zkVerifyJS from npm registry (#4)
* use zkverifyjs from npm registry

* pin versions

* use zkverifyjs version 0.1.0

--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "./packages/*"
   ],
   "dependencies": {
-    "zkverifyjs": "file:packages/zkverifyjs/zkverifyjs-1.0.0.tgz"
+    "zkverifyjs": "0.1.0"
   }
 }
